[tool.poetry]
name = "reflefction-agent"
version = "0.1.0"
description = ""
authors = ["Elder <elder.lima@inter.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.43.0"


[[tool.poetry.source]]
name = "inter-python-releases"
url = "https://nexus.sharedservices.local/repository/python-releases/simple"
priority = "primary"


[[tool.poetry.source]]
name = "inter-python"
url = "https://nexus.sharedservices.local/repository/python/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
