[tool.poetry]
name = "reflexion-agent"
version = "0.1.0"
description = ""
authors = ["Elder <elder.lima@inter.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.0"
python-dotenv = "^1.0.1"
community = "^1.0.0b1"
isort = "^5.13.2"
black = "^24.8.0"
langchain-openai = "^0.2.0"
certifi = "^2024.8.30"
langchain-aws = "^0.2.0"
langgraph = "^0.2.21"
langchain-community = "^0.3.0"


[[tool.poetry.source]]
name = "inter-python-releases"
url = "https://nexus.sharedservices.local/repository/python-releases/simple"
priority = "primary"


[[tool.poetry.source]]
name = "inter-python"
url = "https://nexus.sharedservices.local/repository/python/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
